# scrolling_window_pattern_matcher

./: BORROWING_SOLUTION.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.md.backup
.github/: copilot-instructions.md
docs/: stateful_extraction.md
examples/: demo.rs  fixed_stateful_extraction.rs  showcase.rs  updated_api_demo.rs
src/: lib.rs  lib.rs.backup  lib_backup.rs
tests/: comprehensive_tests.rs  pattern_matcher.rs  pattern_matcher.rs.backup  pattern_matcher_basic.rs
