[package]
name = "scrolling_window_pattern_matcher"
authors = ["Eric Evans <ciresnave@gmail.com>"]
description = "A library for matching patterns in a scrolling window of data."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ciresnave/scrolling_window_pattern_matcher"
version = "0.5.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
